Created HTML skeleton to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-<h1>My first page</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <h1>Bartek Czyżewski</h1>
+
+    <h2>Cześć!</h2>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti dignissimos maxime, hic expedita minus non
+        laboriosam earum eveniet saepe alias itaque, doloribus dolorem impedit minima mollitia fugit? Nisi, assumenda
+        laudantium?</p>
+    
+    <h3>Poczytaj</h3>
+    <ul>
+        <li>Blog</li>
+        <li>Email</li>
+        <li>Newsletter</li>
+    </ul>
+
+    <h3>Pingnij mnie</h3>
+    <ul>
+        <li>Twitter</li>
+        <li>Instagram</li>
+        <li>Dribbble</li>
+    </ul>
+
+    <h3>Zobacz</h3>
+    <ul>
+        <li>Projekt 1</li>
+        <li>Projekt 2</li>
+        <li>Projekt 3</li>
+    </ul>
+
+        <footer>
+            <p>&copy;2021 - Bartosz Czyżewski</p>
+        </footer>
+
+
+
+</body>
+
+</html>
