Setting up HTML skeleton for redesigned personal webpage

--- a/index.html
+++ b/index.html
@@ -1,117 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bartosz Czyzewski - portfolio</title>
 
-    <style>
-      html {
-        font-family: Georgia, "Times New Roman", Times, serif;
-        color: white;
-      }
-      body{
-          margin: 0;
-          background-image: url(bg-image.jpg);
-          background-size: cover;
-      }
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
+</head>
 
-      h1 {
-        text-transform: uppercase;
-        font-family: sans-serif;
-        font-weight: normal;
-        font-size: 16px;
-      }
+<body>
+  <nav class="navigation_section">
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About me</a></li>
+      <li><a href="#project">Project</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+  <section class="welcome_section">
+    <h1>My name is!</h1>
+    <h2>Bartosz Czyżewski</h2>
+    <h3>i jestem</h3>
+    <h2>Deweloper sieci</h2>
+  </section>
+  <!-- ABOUT SECTION -->
+  <section class="about_section">
 
-      h2,
-      h3,
-      footer {
-        font-family: sans-serif;
-      }
+  </section>
+  <!-- PROJECT SECTION -->
+  <section class="project_section">
 
-      h3 {
-        text-transform: uppercase;
-        font-weight: normal;
-        font-size: 13px;
-      }
+  </section>
+  <!-- CONTACT SECTION -->
+  <section class="contact_section">
 
-      ul {
-        padding: 0;
-      }
+  </section>
+  <!-- FOOTER SECTION -->
+  <footer class="footer_section">
 
-      li {
-        list-style: none;
-      }
-      .links {
-        display: flex;
-        justify-content: space-between;
-      }
-      .links section {
-        flex-grow: 1;
-        width: 100%;
-      }
+  </footer>
+</body>
 
-      .page {
-          background: rgb(82, 82, 133);
-          overflow: auto;
-          margin-left: 30%;
-          min-height: 100vh;
-          padding: 40px;
-          box-sizing: border-box;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-      }
-    </style>
-  </head>
-  
-  <section class="page">
-  <body>
-    <h1>Bartosz Czyżewski</h1>
-
-    <h2>Cześć!</h2>
-
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti
-      dignissimos maxime, hic expedita minus non laboriosam earum eveniet saepe
-      alias itaque, doloribus dolorem impedit minima mollitia fugit? Nisi,
-      assumenda laudantium?
-    </p>
-
-    <section class="links">
-      <section>
-        <h3>Poczytaj</h3>
-        <ul>
-          <li>Blog</li>
-          <li>Email</li>
-          <li>Newsletter</li>
-        </ul>
-      </section>
-
-      <section>
-        <h3>Pingnij mnie</h3>
-        <ul>
-          <li>Twitter</li>
-          <li>Instagram</li>
-          <li>Dribbble</li>
-        </ul>
-      </section>
-
-      <section>
-        <h3>Zobacz</h3>
-        <ul>
-          <li>Projekt 1</li>
-          <li>Projekt 2</li>
-          <li>Projekt 3</li>
-        </ul>
-      </section>
-    </section>
-
-    <footer>
-      <p>&copy;2021 - Bartosz Czyżewski</p>
-    </footer>
-</section>
-
-  </body>
 </html>
