small HTML adjustments

--- a/index.html
+++ b/index.html
@@ -6,26 +6,33 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Bartosz Czyżewski</title>
 </head>
 
 <body>
+  <!-- NAVIGATION SECTION -->
   <nav class="navigation_section">
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About me</a></li>
-      <li><a href="#project">Project</a></li>
+      <li><a href="#project">Projects</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
+  <!-- WELCOMING SECTION -->
   <section class="welcome_section">
-    <h1>My name is!</h1>
-    <h2>Bartosz Czyżewski</h2>
-    <h3>i jestem</h3>
-    <h2>Deweloper sieci</h2>
+    <div class="welcome_headings">
+      <h2>Uszanowanko! Mam na imię</h2>
+      <h1>Bartosz Czyżewski</h2>
+        <h2>Front-End Developer</h2>
+    </div>
   </section>
   <!-- ABOUT SECTION -->
   <section class="about_section">
+
+  </section>
+  <!-- RESUME SECTION -->
+  <section class="resume_section">
 
   </section>
   <!-- PROJECT SECTION -->
